[package]
name = "filedesc"
description = "thin wrapper around raw file descriptors"
version = "0.2.0"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]

repository = "https://github.com/de-vri-es/filedesc-rs"
documentation = "https://docs.rs/filedesc"
readme = "README.md"
keywords = ["file", "descriptor", "file-descriptor", "fd", "unix"]
categories = ["os::unix-apis", "os::macos-apis"]

edition = "2018"

[dev-dependencies]
assert2 = "0.3.2"

[dependencies]
libc = "0.2.71"
